remove tasks.json from versioning

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# # Dependencies
-# .psci_modules
-# .spago
-# bower_components
-# node_modules
-
-# # Generated files
-# .psci
-# output
-
 *.ppj
 *.code-workspace
-*.ppj
+.vscode/tasks.json
